; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_playloop.c_handle_delayed_audio_seek.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_playloop.c_handle_delayed_audio_seek.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.MPContext = type { double, i64, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@MP_NOPTS_VALUE = common dso_local global double 0.000000e+00, align 8
@STATUS_EOF = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.MPContext*)* @handle_delayed_audio_seek to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @handle_delayed_audio_seek(%struct.MPContext* %0) #0 {
  %2 = alloca %struct.MPContext*, align 8
  %3 = alloca double, align 8
  store %struct.MPContext* %0, %struct.MPContext** %2, align 8
  %4 = load %struct.MPContext*, %struct.MPContext** %2, align 8
  %5 = getelementptr inbounds %struct.MPContext, %struct.MPContext* %4, i32 0, i32 2
  %6 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %7 = icmp ne %struct.TYPE_2__* %6, null
  br i1 %7, label %8, label %50

8:                                                ; preds = %1
  %9 = load %struct.MPContext*, %struct.MPContext** %2, align 8
  %10 = getelementptr inbounds %struct.MPContext, %struct.MPContext* %9, i32 0, i32 0
  %11 = load double, double* %10, align 8
  %12 = load double, double* @MP_NOPTS_VALUE, align 8
  %13 = fcmp une double %11, %12
  br i1 %13, label %14, label %33

14:                                               ; preds = %8
  %15 = load %struct.MPContext*, %struct.MPContext** %2, align 8
  %16 = getelementptr inbounds %struct.MPContext, %struct.MPContext* %15, i32 0, i32 0
  %17 = load double, double* %16, align 8
  %18 = load %struct.MPContext*, %struct.MPContext** %2, align 8
  %19 = load %struct.MPContext*, %struct.MPContext** %2, align 8
  %20 = getelementptr inbounds %struct.MPContext, %struct.MPContext* %19, i32 0, i32 2
  %21 = load %struct.TYPE_2__*, %struct.TYPE_2__** %20, align 8
  %22 = call double @get_track_seek_offset(%struct.MPContext* %18, %struct.TYPE_2__* %21)
  %23 = fadd double %17, %22
  store double %23, double* %3, align 8
  %24 = load %struct.MPContext*, %struct.MPContext** %2, align 8
  %25 = getelementptr inbounds %struct.MPContext, %struct.MPContext* %24, i32 0, i32 2
  %26 = load %struct.TYPE_2__*, %struct.TYPE_2__** %25, align 8
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = load double, double* %3, align 8
  %30 = call i32 @demux_seek(i32 %28, double %29, i32 0)
  %31 = load %struct.MPContext*, %struct.MPContext** %2, align 8
  %32 = getelementptr inbounds %struct.MPContext, %struct.MPContext* %31, i32 0, i32 2
  store %struct.TYPE_2__* null, %struct.TYPE_2__** %32, align 8
  br label %49

33:                                               ; preds = %8
  %34 = load %struct.MPContext*, %struct.MPContext** %2, align 8
  %35 = getelementptr inbounds %struct.MPContext, %struct.MPContext* %34, i32 0, i32 1
  %36 = load i64, i64* %35, align 8
  %37 = load i64, i64* @STATUS_EOF, align 8
  %38 = icmp sge i64 %36, %37
  br i1 %38, label %39, label %48

39:                                               ; preds = %33
  %40 = load %struct.MPContext*, %struct.MPContext** %2, align 8
  %41 = getelementptr inbounds %struct.MPContext, %struct.MPContext* %40, i32 0, i32 2
  %42 = load %struct.TYPE_2__*, %struct.TYPE_2__** %41, align 8
  %43 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %42, i32 0, i32 0
  %44 = load i32, i32* %43, align 4
  %45 = call i32 @demux_block_reading(i32 %44, i32 0)
  %46 = load %struct.MPContext*, %struct.MPContext** %2, align 8
  %47 = getelementptr inbounds %struct.MPContext, %struct.MPContext* %46, i32 0, i32 2
  store %struct.TYPE_2__* null, %struct.TYPE_2__** %47, align 8
  br label %48

48:                                               ; preds = %39, %33
  br label %49

49:                                               ; preds = %48, %14
  br label %50

50:                                               ; preds = %49, %1
  ret void
}

declare dso_local double @get_track_seek_offset(%struct.MPContext*, %struct.TYPE_2__*) #1

declare dso_local i32 @demux_seek(i32, double, i32) #1

declare dso_local i32 @demux_block_reading(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
